# getdelim

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md  getdelimConfig.cmake.in
.github/workflows/: build-test.yml  clang-format.yml  codeql-analysis.yml  stale.yml
cmake/: BuildType.cmake  DefaultConfig.cmake  DownloadAndUseMunit.cmake  Munit.cmake  MunitAddTests.cmake
include/ay/: getdelim.h
src/: main.c
src/ay/: getdelim.c
tests/: CMakeLists.txt  getdelim.test.c  getline.test.c  main.c  tests.h
